unpackaged/main/default/objects/API_Connector__IWS_Service_Settings__c/API_Connector__IWS_Service_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store iws service information</description>
    <label>IWS Service Settings</label>
</CustomObject>