unpackaged/main/default/objects/API_Connector__IWS_Service_Settings__c/fields/API_Connector__Ref_Client_Url_Param__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Ref_Client_Url_Param__c</fullName>
    <label>Ref Client Url Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>