unpackaged/main/default/objects/API_Connector__IWS_Service_Settings__c/fields/API_Connector__Sources__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Sources__c</fullName>
    <label>Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>